# lambda-opencv-rust-sample

./: .gitignore  Cargo.toml  Dockerfile  Dockerfile.lambda-opencv-rust  Dockerfile.open-cv  README.md  memo.md  template.yaml
src/: app_service.rs  lib.rs  main.rs  s3_service.rs
