[package]
name = "lambda-opencv-rust-sample"
version = "0.1.0"
edition = "2021"
autobins = false

[[bin]]
name = "bootstrap"
path = "src/main.rs"

[dependencies]
# https://crates.io/crates/tokio
tokio = "1.15"
# https://github.com/dtolnay/anyhow
anyhow = { version = "1.0", features = ["backtrace"] }
# https://github.com/rust-lang/log
log = "0.4"
# https://github.com/env-logger-rs/env_logger
env_logger = "0.9"
# https://crates.io/crates/serde
serde = { version = "1.0", features = ["derive"] }
# https://crates.io/crates/serde_json
serde_json = "1.0"
# https://crates.io/crates/lambda_runtime
lambda_runtime = "0.4"
# https://crates.io/crates/opencv
opencv = "0.61"

[dev-dependencies]
# https://crates.io/crates/pretty_assertions
pretty_assertions = "1.0"
# https://crates.io/crates/test-env-log
test-env-log = "0.2"
