[package]
name = "lambda-opencv-rust-sample"
version = "0.1.0"
edition = "2021"
autobins = false

[[bin]]
name = "bootstrap"
path = "src/main.rs"

[dependencies]
# https://crates.io/crates/lambda_runtime
lambda_runtime = "0.4"
# https://crates.io/crates/tokio
tokio = "1.15"
# https://crates.io/crates/serde_json
serde_json = "1.0"

# https://crates.io/crates/anyhow
anyhow = { version = "1.0", features = ["backtrace"] }
# https://crates.io/crates/log
log = "0.4"
# https://crates.io/crates/tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# https://crates.io/crates/derive-new
derive-new = "0.5"

# https://crates.io/crates/percent-encoding
percent-encoding = "2.1"

aws-config = "0.6"
aws-sdk-s3 = "0.6"

# https://crates.io/crates/opencv
opencv = "0.62"

# https://crates.io/crates/bytes
bytes = "1.1"

[dev-dependencies]
# https://crates.io/crates/pretty_assertions
pretty_assertions = "1.0"
