[package]
name = "lambda-opencv-rust-sample"
version = "0.1.0"
edition = "2021"
autobins = false

[[bin]]
name = "bootstrap"
path = "src/main.rs"

[dependencies]
# https://crates.io/crates/lambda_runtime
lambda_runtime = "0.4.1"
# https://crates.io/crates/tokio
tokio = "1.16.1"
# https://crates.io/crates/serde_json
serde_json = "1.0.79"

# https://crates.io/crates/anyhow
anyhow = { version = "1.0.53", features = ["backtrace"] }
# https://crates.io/crates/log
log = "0.4.14"
# https://crates.io/crates/tracing
tracing = "0.1.30"
tracing-subscriber = { version = "0.3.8", features = ["env-filter", "json"] }

# https://crates.io/crates/derive-new
derive-new = "0.5.9"

# https://crates.io/crates/percent-encoding
percent-encoding = "2.1.0"

aws-config = "0.6.0"
aws-sdk-s3 = "0.6.0"

# https://crates.io/crates/opencv
opencv = "0.63.0"

# https://crates.io/crates/bytes
bytes = "1.1.0"

[dev-dependencies]
# https://crates.io/crates/pretty_assertions
pretty_assertions = "1.1.0"
